# rekordbox-to-traktor

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  intel-build-test.yml  release.yml
docs/: RELEASES.md
packaging/: launch_gui.py  rb2traktor.spec
scripts/: release.ps1  spike_rb.py  spike_rb2.py  verify_e2e.py
src/rb2traktor/: __init__.py  cli.py  locate.py  models.py
src/rb2traktor/gui/: __init__.py  app.py  track_model.py
src/rb2traktor/mapping/: __init__.py  cues.py  grid.py  rb_colors.py
src/rb2traktor/matcher/: __init__.py  matcher.py  paths.py
src/rb2traktor/rb_reader/: __init__.py  db.py  xml.py
src/rb2traktor/sync/: __init__.py  conflicts.py  engine.py
src/rb2traktor/traktor_io/: __init__.py  reader.py  safe_output.py  writer.py
tests/: test_conflicts.py  test_cues_mapping.py  test_grid_mapping.py  test_gui_smoke.py  test_matcher.py  test_paths.py  test_safe_output.py  test_writer.py
tests/fixtures/: collection.nml
